# spark-sre-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  spark_sre_agent.code-workspace
scripts/: simulate_airflow_failure.py
spark_sre_agent/airflow_plugin/: spark_sre_callback.py
spark_sre_agent/config/: settings.py
spark_sre_agent/core/: ai_agent.py  email_notifier.py  spark_log_analyzer.py
tests/: test_agent.py
